Pontoon: Update Korean (ko) localization of Firefox Co-authored-by: Kim YoungCheon <circcc@gmail.com>

--- a/ko/browser/chrome/browser/browser.properties
+++ b/ko/browser/chrome/browser/browser.properties
@@ -485,7 +485,7 @@ webauthn.proceed.accesskey=p
 webauthn.anonymize=익명으로 진행
 
 # Spoof Accept-Language prompt
-privacy.spoof_english=영어로 언어를 변경하면 식별과 개인정보 보호가 힘들 수 있습니다. 영어 버전의 웹페이지를 요청하시겠습니까?
+privacy.spoof_english=언어 설정을 영어로 변경하면 사용자를 식별하기 어려워 개인 정보 보호가 향상됩니다. 영어 버전의 웹 페이지를 요청하시겠습니까?
 
 # LOCALIZATION NOTE (identity.headerWithHost):
 # %S is the hostname of the site that is being displayed.
