Pontoon: Update Hungarian (hu) localization of SeaMonkey Co-authored-by: siparon <siparon@gmail.com> Co-authored-by: Balázs Meskó <meskobalazs@mailbox.org>

--- a/hu/suite/chrome/mailnews/messenger.properties
+++ b/hu/suite/chrome/mailnews/messenger.properties
@@ -365,6 +365,8 @@ newMailAlert_message=#1 #2 új üzenetet kapott;#1 #2 új üzenetet kapott
 
 # For the Quota tab in the mail folder properties dialog
 quotaUsedFree=%S / %S KB felhasználva
+
+# For the Quota tab in the mail folder properties dialog
 quotaPercentUsed=%S%% tele
 
 # for message views
@@ -470,6 +472,9 @@ mailServerLoginFailedTitleWithAccount=A(z) „%S” fiókba bejelentkezés siker
 mailServerLoginFailed2=A(z) %1$S kiszolgálóra bejelentkezés sikertelen a(z) %2$S felhasználónévvel.
 mailServerLoginFailedRetryButton=Új&ra
 mailServerLoginFailedEnterNewPasswordButton=Új jel&szó megadása
+
+confirmMarkAllFoldersReadTitle=Összes mappa jelölése olvasottként
+confirmMarkAllFoldersReadMessage=Biztos, hogy olvasottnak jelöli az összes üzenetet a fiók összes mappájában?
 
 # LOCALIZATION NOTE (junkBarMessage): %S is the brandname
 junkBarMessage=A %S szerint ez az üzenet levélszemét.
