--- a/hu/browser/chrome/browser/browser.properties
+++ b/hu/browser/chrome/browser/browser.properties
@@ -1228,3 +1228,7 @@ confirmationHint.breakageReport.label = Jelentés beküldve. Köszönjük!
 # Used by the export of user's live bookmarks to an OPML file as a title for the file.
 # %S will be replaced with brandShortName
 livebookmarkMigration.title                      = %S élő könyvjelzők
+
+# LOCALIZATION NOTE (gnomeSearchProviderSearch):
+# Used for search by Gnome Shell activity screen, %S is a searched string.
+gnomeSearchProviderSearch=Keressen rá az interneten erre: %S
