--- a/hu/devtools/client/debugger.properties
+++ b/hu/devtools/client/debugger.properties
@@ -686,6 +686,17 @@ inlinePreview.show.label=Soron belüli előnézet megjelenítése
 # for hiding the inline preview block
 inlinePreview.hide.label=Soron belüli előnézet elrejtése
 
+# LOCALIZATION NOTE (settings.button.label): Label for Settings button
+settings.button.label=Hibakereső beállításai
+
+# LOCALIZATION NOTE (settings.disableJavaScript.label): Context menu item
+# label for disabling JavaScript
+settings.disableJavaScript.label=JavaScript kikapcsolása
+
+# LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
+# tooltip for disabling JavaScript
+settings.disableJavaScript.tooltip=Kikapcsolja a JavaScriptet (frissítést igényel)
+
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
 preview.noProperties=Nincsenek tulajdonságok
