--- a/hu/devtools/client/netmonitor.properties
+++ b/hu/devtools/client/netmonitor.properties
@@ -1062,6 +1062,11 @@ netmonitor.toolbar.timings=Időzítések
 # response headers submenu.
 netmonitor.toolbar.responseHeaders=Válasz fejlécek
 
+# LOCALIZATION NOTE (netmonitor.headers.toolbar.block): This is the
+# label displayed in the network details headers tab identifying the
+# block url toolbar button.
+netmonitor.headers.toolbar.block=Tiltás
+
 # LOCALIZATION NOTE (netmonitor.summary.url): This is the label displayed
 # in the network details headers tab identifying the URL.
 netmonitor.summary.url=Kérés URL:
@@ -1111,6 +1116,11 @@ netmonitor.summary.rawHeaders.responseHeaders=Válaszfejlécek:
 # LOCALIZATION NOTE (netmonitor.summary.size): This is the label displayed
 # in the network details headers tab identifying the headers size.
 netmonitor.summary.size=Fejlécméret:
+
+# LOCALIZATION NOTE (netmonitor.headers.raw): This is the label displayed
+# on the button in the headers tab that toggle view for raw request/response headers
+# from the currently displayed request
+netmonitor.headers.raw=Formázatlan
 
 # LOCALIZATION NOTE (netmonitor.response.name): This is the label displayed
 # in the network details response tab identifying an image's file name.
