Pontoon: Update Thai (th) localization of Firefox Co-authored-by: niruhn <niruhn@gmail.com> Co-authored-by: Chengings <chengings@gmail.com>

--- a/th/browser/installer/nsisstrings.properties
+++ b/th/browser/installer/nsisstrings.properties
@@ -9,12 +9,6 @@
 # Accesskeys are defined by prefixing the letter that is to be used for the
 # accesskey with an ampersand (e.g. &).
 
-# Do not replace $BrandShortName, $BrandFullName, or $BrandFullNameDA with a
-# custom string and always use the same one as used by the en-US files.
-# $BrandFullNameDA allows the string to contain an ampersand (e.g. DA stands
-# for double ampersand) and prevents the letter following the ampersand from
-# being used as an accesskey.
-
 # Do not replace $BrandShortName, $BrandProductName, $BrandFullName,
 # or $BrandFullNameDA with a custom string and always use the same one as used
 # by the en-US files.
@@ -27,15 +21,14 @@
 
 INSTALLER_WIN_CAPTION=ตัวติดตั้ง $BrandShortName
 
-# The \n in the next two strings can be moved or deleted as needed to make
-# the string fit in the 3 lines of space available.
-STUB_CLEANUP_PAVEOVER_HEADER=มีการติดตั้ง $BrandShortName อยู่แล้ว\nมาอัปเดตกันเลย
-STUB_CLEANUP_REINSTALL_HEADER=$BrandShortName ถูกติดตั้งอยู่ก่อนหน้า\nมารับสำเนาใหม่ให้คุณกันเลย
 STUB_CLEANUP_PAVEOVER_HEADER2=มีการติดตั้ง $BrandShortName อยู่แล้ว มาอัปเดตกันเลย
 STUB_CLEANUP_REINSTALL_HEADER2=$BrandShortName ถูกติดตั้งอยู่ก่อนหน้า มารับสำเนาใหม่ให้คุณกันเลย
 STUB_CLEANUP_PAVEOVER_BUTTON=&อัปเดต
 STUB_CLEANUP_REINSTALL_BUTTON=&ติดตั้งใหม่
 STUB_CLEANUP_CHECKBOX_LABEL=เ&รียกคืนการตั้งค่าเริ่มต้นและเอาส่วนเสริมเก่าออกเพื่อประสิทธิภาพที่ดีที่สุด
+
+STUB_CLEANUP_PAVEOVER_BUTTON2=ปรับปรุง
+STUB_CLEANUP_REINSTALL_BUTTON2=ติดตั้งใหม่
 
 STUB_INSTALLING_LABEL2=ขณะนี้กำลังติดตั้ง…
 # The \n in the next string is intended to force a nice-looking layout in en-US
@@ -43,6 +36,8 @@ STUB_INSTALLING_LABEL2=ขณะนี้กำลังติดตั้ง…
 # number of lines available.
 STUB_INSTALLING_HEADLINE=ความเป็นส่วนตัวของคุณต้องมาก่อน\nเข้าร่วม $BrandProductName
 STUB_INSTALLING_BODY=รับผลิตภัณฑ์ที่เน้นความเป็นส่วนตัวที่เหลือของเราและเรียนรู้วิธีการใช้ชีวิตในโลกออนไลน์อย่างชาญฉลาดและปลอดภัยยิ่งขึ้น
+STUB_INSTALLING_HEADLINE2=ปรับการตั้งค่าของคุณให้เหมาะสมกับความเร็วความเป็นส่วนตัวและความปลอดภัย
+STUB_INSTALLING_BODY2=$BrandShortName จะพร้อมใช้ในอีกไม่กี่นาที
 STUB_BLURB_FIRST1=$BrandShortName ที่เร็วที่สุดและตอบสนองได้ดีที่สุดเท่าที่เคยมีมา
 STUB_BLURB_SECOND1=การโหลดหน้าและการสลับแท็บที่เร็วขึ้น
 STUB_BLURB_THIRD1=การเรียกดูแบบส่วนตัวที่ทรงพลัง
