Pontoon: Update Spanish (Argentina) (es-AR) localization of SeaMonkey Co-authored-by: Gabriela <gmontagu@gmail.com>

--- a/es-AR/suite/branding/seamonkey/brand.properties
+++ b/es-AR/suite/branding/seamonkey/brand.properties
@@ -8,4 +8,5 @@ brandShorterName=SeaMonkey
 vendorShortName=SeaMonkey
 sidebarName=Barra lateral
 app.releaseNotesURL=https://www.seamonkey-project.org/releases/seamonkey%VERSION%/
+app.troubleshootingURL=https://www.seamonkey-project.org/lanzamientos/seamonkey%VERSIÓN%/#solución de problemas
 app.vendorURL=https://www.seamonkey-project.org/
