Pontoon: Update Croatian (hr) localization of Firefox Co-authored-by: Mikeyy <mihovil@miho.im>

--- a/hr/browser/chrome/browser/browser.properties
+++ b/hr/browser/chrome/browser/browser.properties
@@ -1231,3 +1231,4 @@ livebookmarkMigration.title                      = %S žive zabilješke
 
 # LOCALIZATION NOTE (gnomeSearchProviderSearch):
 # Used for search by Gnome Shell activity screen, %S is a searched string.
+gnomeSearchProviderSearch=Pretražite web za %S
