--- a/hr/browser/installer/nsisstrings.properties
+++ b/hr/browser/installer/nsisstrings.properties
@@ -37,6 +37,8 @@ STUB_INSTALLING_LABEL2=Trenutno se instalira…
 # number of lines available.
 STUB_INSTALLING_HEADLINE=Stavi svoju privatnost na prvo mjesto.\nPridruži se $BrandProductName.
 STUB_INSTALLING_BODY=Preuzmi ostatak naših proizvoda za zaštitu privatnosti i nauči kako se pametnije zaštiti na Internetu.
+STUB_INSTALLING_HEADLINE2=Optimizirajte svoje postavke za brzinu, privatnost i sigurnost.
+STUB_INSTALLING_BODY2=$BrandShortName će biti spreman za nekoliko trenutaka.
 STUB_BLURB_FIRST1=Najbrži, najprilagodljiviji $BrandShortName do sada
 STUB_BLURB_SECOND1=Brže učitavanje stranica i prebacivanje između kartica
 STUB_BLURB_THIRD1=Moćno privatno pregledavanje
