--- a/hr/netwerk/necko.properties
+++ b/hr/netwerk/necko.properties
@@ -58,6 +58,7 @@ CookieAllowedForOriginOnTrackerByHeuristic=Pristup spremištu automatski je odob
 CookieAllowedForTrackerByHeuristic=Pristup spremištu automatski je dozvoljen programu za praćenje „%2$S” na „%1$S”.
 
 # LOCALIZATION NOTE (CookieAllowedForFpiByHeuristic): %2$S and %1$S are URLs.
+CookieAllowedForFpiByHeuristic=Pristup spremištu automatski je dozvoljen za izolaciju prvog reda “%2$S” na “%1$S”.
 
 # LOCALIZATION NOTE(CookieRejectedNonRequiresSecure): %1$S is the cookie name. Do not localize "sameSite=none" and "secure".
 CookieRejectedNonRequiresSecure=Kolačić “%1$S” je odbijen iz razloga što ima “sameSite=none” atribut, ali nedostaje “secure” atribut.
