--- a/ka/toolkit/chrome/mozapps/profile/profileSelection.properties
+++ b/ka/toolkit/chrome/mozapps/profile/profileSelection.properties
@@ -5,9 +5,10 @@
 # LOCALIZATION NOTE: These strings are used for startup/profile problems and the profile manager.
 
 # Application not responding
-# LOCALIZATION NOTE (restartTitle, restartMessageNoUnlocker, restartMessageUnlocker, restartMessageNoUnlockerMac, restartMessageUnlockerMac): Messages displayed when the application is running but is not responding to commands. %S is the application name.
+# LOCALIZATION NOTE (restartTitle, restartMessageNoUnlocker2, restartMessageUnlocker, restartMessageNoUnlockerMac, restartMessageUnlockerMac): Messages displayed when the application is running but is not responding to commands. %S is the application name.
 restartTitle=დაიხუროს %S
 restartMessageNoUnlocker=%S უკვე გაშვებულია, თუმცა არ პასუხობს. ახალი ფანჯრის გასახსნელად უნდა დახუროთ არსებული %S, ან სისტემა ჩართოთ ხელახლა.
+restartMessageNoUnlocker2=%S უკვე გაშვებულია, თუმცა არ პასუხობს. %S რომ გამოიყენოთ, ჯერ უნდა დახუროთ მიმდინარე %S პროცესი, სისტემა ჩართოთ ხელახლა ან სხვა პროფილით ისარგებლოთ.
 restartMessageUnlocker=%S უკვე გაშვებულია, თუმცა არ პასუხობს. ახალი ფანჯრის გასახსნელად, მიმდინარე %S უნდა დაიხუროს.
 restartMessageNoUnlockerMac=%S უკვე გაშვებულია. ერთდროულად, ერთზე მეტი %S, ვერ გაეშვება.
 restartMessageUnlockerMac=%S უკვე გაშვებულია. ახლის გასაშვებად, მიმდინარე %S უნდა დაიხუროს.
