Pontoon: Update Portuguese (Portugal) (pt-PT) localization of Firefox Co-authored-by: Manuela Silva <manuelarodsilva@gmail.com> Co-authored-by: Cláudio Esperança <cesperanc@gmail.com>

--- a/pt-PT/browser/chrome/browser/browser.properties
+++ b/pt-PT/browser/chrome/browser/browser.properties
@@ -1228,3 +1228,7 @@ confirmationHint.breakageReport.label = Relatório enviado. Obrigado!
 # Used by the export of user's live bookmarks to an OPML file as a title for the file.
 # %S will be replaced with brandShortName
 livebookmarkMigration.title                      = Marcadores dinâmicos do %S
+
+# LOCALIZATION NOTE (gnomeSearchProviderSearch):
+# Used for search by Gnome Shell activity screen, %S is a searched string.
+gnomeSearchProviderSearch=Pesquisar na Internet por %S
