--- a/pt-PT/devtools/client/netmonitor.properties
+++ b/pt-PT/devtools/client/netmonitor.properties
@@ -88,23 +88,23 @@ cookiesFilterText=Filtrar cookies
 responseEmptyText=Nenhum dado de resposta disponível para este pedido
 
 # LOCALIZATION NOTE (paramsEmptyText): This is the text displayed in the
-# params tab of the network details pane when there are no params available.
+# request tab of the network details pane when there are no params available.
 paramsEmptyText=Sem parâmetros para este pedido
 
 # LOCALIZATION NOTE (paramsFilterText): This is the text displayed in the
-# params tab of the network details pane for the filtering input.
+# request tab of the network details pane for the filtering input.
 paramsFilterText=Filtrar parâmetros do pedido
 
 # LOCALIZATION NOTE (paramsQueryString): This is the label displayed
-# in the network details params tab identifying the query string.
+# in the network details request tab identifying the query string.
 paramsQueryString=String de consulta
 
 # LOCALIZATION NOTE (paramsFormData): This is the label displayed
-# in the network details params tab identifying the form data.
+# in the network details request tab identifying the form data.
 paramsFormData=Dados do formulário
 
 # LOCALIZATION NOTE (paramsPostPayload): This is the label displayed
-# in the network details params tab identifying the request payload.
+# in the network details request tab identifying the request payload.
 paramsPostPayload=Payload do pedido
 
 # LOCALIZATION NOTE (requestHeaders): This is the label displayed
@@ -121,11 +121,11 @@ requestHeadersFromUpload=Cabeçalhos do pedido do fluxo de carregamento
 responseHeaders=Cabeçalhos de resposta
 
 # LOCALIZATION NOTE (requestCookies): This is the label displayed
-# in the network details params tab identifying the request cookies.
+# in the network details request tab identifying the request cookies.
 requestCookies=Cookies de solicitação
 
 # LOCALIZATION NOTE (responseCookies): This is the label displayed
-# in the network details params tab identifying the response cookies.
+# in the network details request tab identifying the response cookies.
 responseCookies=Cookies de resposta
 
 # LOCALIZATION NOTE (responsePayload): This is the label displayed
@@ -150,7 +150,7 @@ jsonpScopeName=JSONP → chamada de retorno %S()
 responseTruncated=A resposta foi truncada
 
 # LOCALIZATION NOTE (requestTruncated): This is the text displayed
-# in the params tab of the network details pane when the request is over
+# in the request tab of the network details pane when the request is over
 # the truncation limit and thus was truncated.
 requestTruncated=O pedido foi truncado
 
@@ -867,6 +867,18 @@ netmonitor.actionbar.removeBlockedUrl=Remover padrão
 # tooltip shown over the Add Blocked URL button
 netmonitor.actionbar.addBlockedUrl=Adicionar padrão
 
+# LOCALIZATION NOTE (netmonitor.requestBlockingMenu.removeAllBlockedUrls): This is the
+# context menu item for removing all blocked URLs
+netmonitor.requestBlockingMenu.removeAllBlockedUrls=Remover tudo
+
+# LOCALIZATION NOTE (netmonitor.requestBlockingMenu.enableAllBlockedUrls): This is the
+# context menu item for enabling all blocked URLs
+netmonitor.requestBlockingMenu.enableAllBlockedUrls=Ativar tudo
+
+# LOCALIZATION NOTE (netmonitor.requestBlockingMenu.disableAllBlockedUrls): This is the
+# context menu item for disabling all blocked URLs
+netmonitor.requestBlockingMenu.disableAllBlockedUrls=Desativar tudo
+
 # LOCALIZATION NOTE (netmonitor.actionbar.search): This is the label displayed
 # in the action bar's search tab
 netmonitor.actionbar.search=Pesquisar
@@ -908,6 +920,10 @@ netmonitor.tab.cache=Cache
 # LOCALIZATION NOTE (netmonitor.tab.params): This is the label displayed
 # in the network details pane identifying the params tab.
 netmonitor.tab.params=Parâmetros
+
+# LOCALIZATION NOTE (netmonitor.tab.request): This is the label displayed
+# in the network details pane identifying the request tab.
+netmonitor.tab.request=Pedido
 
 # LOCALIZATION NOTE (netmonitor.tab.response): This is the label displayed
 # in the network details pane identifying the response tab.
@@ -1046,6 +1062,11 @@ netmonitor.toolbar.timings=Temporizações
 # response headers submenu.
 netmonitor.toolbar.responseHeaders=Cabeçalhos de resposta
 
+# LOCALIZATION NOTE (netmonitor.headers.toolbar.block): This is the
+# label displayed in the network details headers tab identifying the
+# block url toolbar button.
+netmonitor.headers.toolbar.block=Bloqueio
+
 # LOCALIZATION NOTE (netmonitor.summary.url): This is the label displayed
 # in the network details headers tab identifying the URL.
 netmonitor.summary.url=URL do pedido:
@@ -1095,6 +1116,11 @@ netmonitor.summary.rawHeaders.responseHeaders=Cabeçalhos de resposta:
 # LOCALIZATION NOTE (netmonitor.summary.size): This is the label displayed
 # in the network details headers tab identifying the headers size.
 netmonitor.summary.size=Tamanho dos cabeçalhos:
+
+# LOCALIZATION NOTE (netmonitor.headers.raw): This is the label displayed
+# on the button in the headers tab that toggle view for raw request/response headers
+# from the currently displayed request
+netmonitor.headers.raw=Original
 
 # LOCALIZATION NOTE (netmonitor.response.name): This is the label displayed
 # in the network details response tab identifying an image's file name.
@@ -1533,3 +1559,19 @@ netmonitor.cache.lastModified=Última modificação
 # LOCALIZATION NOTE (netmonitor.cache.device): This is the label text for the device
 # where a cached object was fetched from (e.g. "disk").
 netmonitor.cache.device=Dispositivo
+
+# LOCALIZATION NOTE (netmonitor.settings.menuTooltip): This is the tooltip that gets displayed
+# when the settings menu button is hovered.
+netmonitor.settings.menuTooltip=Definições de rede
+
+# LOCALIZATION NOTE (netmonitor.settings.importHarTooltip): This is the tooltip that gets displayed
+# when the HAR import menu item is hovered
+netmonitor.settings.importHarTooltip=Importar um ficheiro HAR dos dados da rede
+
+# LOCALIZATION NOTE (netmonitor.settings.saveHarTooltip): This is the tooltip that gets displayed
+# when the HAR save menu item is hovered
+netmonitor.settings.saveHarTooltip=Guardar os dados da rede num ficheiro HAR
+
+# LOCALIZATION NOTE (netmonitor.settings.copyHarTooltip): This is the tooltip that gets displayed
+# when the HAR copy menu item is hovered
+netmonitor.settings.copyHarTooltip=Copiar os dados da rede para a área de transferência
