--- a/pt-PT/browser/installer/nsisstrings.properties
+++ b/pt-PT/browser/installer/nsisstrings.properties
@@ -27,12 +27,18 @@ STUB_CLEANUP_PAVEOVER_BUTTON=&Atualizar
 STUB_CLEANUP_REINSTALL_BUTTON=Re-&instalar
 STUB_CLEANUP_CHECKBOX_LABEL=&Restaurar definições predefinidas e remover extras antigos para desempenho ideal
 
+STUB_CLEANUP_PAVEOVER_BUTTON2=Atualizar
+STUB_CLEANUP_REINSTALL_BUTTON2=Reinstalar
+STUB_CLEANUP_CHECKBOX_LABEL2=Restaurar as definições predefinidas e remover os extras antigos para um melhor desempenho
+
 STUB_INSTALLING_LABEL2=A instalar agora…
 # The \n in the next string is intended to force a nice-looking layout in en-US
 # and can be moved or deleted as needed. There's no practical limit on the
 # number of lines available.
 STUB_INSTALLING_HEADLINE=Coloque a sua privacidade em primeiro lugar.\nJunte-se ao $BrandProductName.
 STUB_INSTALLING_BODY=Conheça os nossos outros produtos, focados na privacidade, e saiba como se manter mais inteligente e seguro na Internet.
+STUB_INSTALLING_HEADLINE2=Otimize as suas definições para velocidade, privacidade e segurança.
+STUB_INSTALLING_BODY2=O $BrandShortName estará pronto em breve.
 STUB_BLURB_FIRST1=O $BrandShortName mais rápido e dinâmico de sempre
 STUB_BLURB_SECOND1=Carregamento de páginas e troca de separadores mais rápidos
 STUB_BLURB_THIRD1=Navegação privada poderosa
