--- a/pt-PT/devtools/client/debugger.properties
+++ b/pt-PT/devtools/client/debugger.properties
@@ -686,6 +686,17 @@ inlinePreview.show.label=Mostrar pré-visualização em linha
 # for hiding the inline preview block
 inlinePreview.hide.label=Ocultar pré-visualização em linha
 
+# LOCALIZATION NOTE (settings.button.label): Label for Settings button
+settings.button.label=Definições do depurador
+
+# LOCALIZATION NOTE (settings.disableJavaScript.label): Context menu item
+# label for disabling JavaScript
+settings.disableJavaScript.label=Desativar JavaScript
+
+# LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
+# tooltip for disabling JavaScript
+settings.disableJavaScript.tooltip=Desativa o JavaScript (é necessário atualizar)
+
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
 preview.noProperties=Sem propriedades
@@ -740,6 +751,10 @@ watchpoints.getWatchpoint=Obtenção de propriedade
 # LOCALIZATION NOTE (watchpoints.setWatchpoint): This is the text that appears in the
 # watchpoints submenu to add a "set" watchpoint on an object property.
 watchpoints.setWatchpoint=Definição de propriedade
+
+# LOCALIZATION NOTE (watchpoints.getOrSetWatchpoint): This is the text that appears in the
+# watchpoints submenu to add a "set" watchpoint on an object property.
+watchpoints.getOrSetWatchpoint=Obter ou definir propriedade
 
 # LOCALIZATION NOTE (watchpoints.removeWatchpoint): This is the text that appears in the
 # context menu to delete a watchpoint on an object property.
