--- a/pt-PT/devtools/shared/screenshot.properties
+++ b/pt-PT/devtools/shared/screenshot.properties
@@ -114,3 +114,20 @@ inspectNodeDesc=Seletor CSS
 # parameter to the 'inspect' command. Displayed when the --help flag is
 # passed to the `screenshot command.
 inspectNodeManual=Um seletor CSS para uso com document.querySelector que identifica um único elemento
+
+# LOCALIZATION NOTE (screenshotTruncationWarning) Text displayed to user when the image
+# that would be created by the screenshot is too big and needs to be truncated to avoid
+# errors.
+# The first parameter is the width of the final image and the second parameter is the
+# height of the image.
+screenshotTruncationWarning=A imagem foi cortada para %1$S×%2$S porque a imagem resultante era muito grande
+
+# LOCALIZATION NOTE (screenshotDPRDecreasedWarning) Text displayed to user when the
+# screenshot they want to take is for the full page and the Device Pixel Ratio is
+# decreased to 1, to avoid creating images that are too big which may cause errors.
+screenshotDPRDecreasedWarning=A proporção de pixeis do dispositivo foi reduzida para 1, pois a imagem resultante era muito grande
+
+# LOCALIZATION NOTE (screenshotRenderingError) Text displayed to user upon
+# encountering an error while rendering the screenshot. This most often happens when the
+# resulting image is too large to be rendered.
+screenshotRenderingError=Erro ao criar a imagem. A imagem resultante provavelmente era muito grande.
