--- a/pt-PT/dom/chrome/accessibility/AccessFu.properties
+++ b/pt-PT/dom/chrome/accessibility/AccessFu.properties
@@ -130,6 +130,8 @@ main           =       principal
 navigation     =       navegação
 search         =       pesquisa
 
+region         =       região
+
 # LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
 # Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
