--- a/pt-PT/toolkit/chrome/mozapps/profile/profileSelection.properties
+++ b/pt-PT/toolkit/chrome/mozapps/profile/profileSelection.properties
@@ -5,9 +5,10 @@
 # LOCALIZATION NOTE: These strings are used for startup/profile problems and the profile manager.
 
 # Application not responding
-# LOCALIZATION NOTE (restartTitle, restartMessageNoUnlocker, restartMessageUnlocker, restartMessageNoUnlockerMac, restartMessageUnlockerMac): Messages displayed when the application is running but is not responding to commands. %S is the application name.
+# LOCALIZATION NOTE (restartTitle, restartMessageNoUnlocker2, restartMessageUnlocker, restartMessageNoUnlockerMac, restartMessageUnlockerMac): Messages displayed when the application is running but is not responding to commands. %S is the application name.
 restartTitle=Fechar o %S
 restartMessageNoUnlocker=O %S já está em execução, mas não está a responder. Antes de abrir uma nova janela, tem de fechar o processo %S ou reiniciar o seu sistema.
+restartMessageNoUnlocker2=%S já está em execução, mas não está a responder. Para utilizar %S, deve primeiro fechar o processo %S existente, reiniciar o dispositivo ou utilizar um perfil diferente.
 restartMessageUnlocker=O %S já está em execução, mas não está a responder. O processo existente do %S tem de ser terminado para abrir uma nova janela.
 restartMessageNoUnlockerMac=Já está aberta uma cópia do %S. Só é permitida uma cópia do %S em simultâneo.
 restartMessageUnlockerMac=Já está aberta uma cópia do %S. A cópia em execução do %S irá ser encerrada para que possa abrir esta.
