Pontoon: Update Lithuanian (lt) localization of Firefox Co-authored-by: Paulius <paulius@mozilla.lt>

--- a/lt/devtools/client/debugger.properties
+++ b/lt/devtools/client/debugger.properties
@@ -686,6 +686,17 @@ inlinePreview.show.label=Rodyti peržiūrą eilutėje
 # for hiding the inline preview block
 inlinePreview.hide.label=Slėpti peržiūrą eilutėje
 
+# LOCALIZATION NOTE (settings.button.label): Label for Settings button
+settings.button.label=Derintuvės nuostatos
+
+# LOCALIZATION NOTE (settings.disableJavaScript.label): Context menu item
+# label for disabling JavaScript
+settings.disableJavaScript.label=Išjungti „JavaScript“
+
+# LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
+# tooltip for disabling JavaScript
+settings.disableJavaScript.tooltip=„JavaScipt“ bus išjungtas (reikės įkelti iš naujo)
+
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
 preview.noProperties=Jokių savybių
