--- a/lt/devtools/client/webconsole.properties
+++ b/lt/devtools/client/webconsole.properties
@@ -226,6 +226,11 @@ webconsole.menu.selectAll.accesskey=v
 # Label used for a context-menu item displayed for object/variable logs. Clicking on it
 # opens the webconsole sidebar for the logged variable.
 webconsole.menu.openInSidebar.label=Atverti polangyje
+
+# LOCALIZATION NOTE (webconsole.menu.openInSidebar.label)
+# Label used for a context-menu item displayed for object/variable logs. Clicking on it
+# opens the webconsole sidebar for the logged variable.
+webconsole.menu.openInSidebar.label1=Tirti objektą parankinėje
 webconsole.menu.openInSidebar.accesskey=v
 
 # LOCALIZATION NOTE (webconsole.menu.exportClipboard.label)
