Pontoon: Update Portuguese (Portugal) (pt-PT) localization of Firefox Co-authored-by: Manuela Silva <manuelarodsilva@gmail.com> Co-authored-by: Cláudio Esperança <cesperanc@gmail.com>

--- a/pt-PT/browser/chrome/browser/browser.properties
+++ b/pt-PT/browser/chrome/browser/browser.properties
@@ -323,7 +323,7 @@ keywordURIFixup.dismiss.accesskey=N
 pluginInfo.unknownPlugin=Desconhecido
 
 # Flash activation doorhanger UI
-flashActivate.message=Pretende permitir ao Adobe Flash executar neste site? Permita apenas o Adobe Flash em sites que confia.
+flashActivate.message=Pretende permitir que o Adobe Flash funcione neste site? Apenas permita o Adobe Flash em sites de confiança.
 flashActivate.outdated.message=Pretende permitir uma versão desatualizada do Adobe Flash executar neste site? Uma versão desatualizada pode afetar o desempenho e segurança do navegador.
 flashActivate.remember=Memorizar esta decisão
 flashActivate.noAllow=Não permitir
