--- a/pt-PT/browser/chrome/browser/tabbrowser.properties
+++ b/pt-PT/browser/chrome/browser/tabbrowser.properties
@@ -115,7 +115,7 @@ tabs.unblockAudio2.tooltip=Reproduzir separador;Reproduzir #1 separadores
 
 # LOCALIZATION NOTE (tabs.allowTabFocusByPromptForSite):
 # %S is the hostname of the site where dialogs are allowed to switch tabs
-tabs.allowTabFocusByPromptForSite=Permitir diálogos de %S para lhe levar ao próprio separador
+tabs.allowTabFocusByPromptForSite=Permitir janelas de %S para o levar para os respetivos separadores
 
 # LOCALIZATION NOTE (tabs.containers.tooltip):
 # Displayed as a tooltip on container tabs
