--- a/pt-PT/dom/chrome/accessibility/AccessFu.properties
+++ b/pt-PT/dom/chrome/accessibility/AccessFu.properties
@@ -227,7 +227,7 @@ notation-circle             = círculo
 notation-left               = esquerda
 notation-right              = direita
 notation-top                = topo
-notation-bottom             = inferior
+notation-bottom             = fim
 notation-updiagonalstrike   = diagonal rasurada para cima
 notation-downdiagonalstrike = diagonal rasurada para baixo
 notation-verticalstrike     = traço vertical
