Pontoon: Update Portuguese (Portugal) (pt-PT) localization of SeaMonkey Co-authored-by: Manuela Silva <manuelarodsilva@gmail.com> Co-authored-by: Cláudio Esperança <cesperanc@gmail.com>

--- a/pt-PT/suite/chrome/mailnews/messenger.properties
+++ b/pt-PT/suite/chrome/mailnews/messenger.properties
@@ -365,6 +365,8 @@ newMailAlert_message=#1 recebeu #2 nova mensagem;#1 recebeu #2 novas mensagens
 
 # For the Quota tab in the mail folder properties dialog
 quotaUsedFree=utilizados %S de %S KB
+
+# For the Quota tab in the mail folder properties dialog
 quotaPercentUsed=%S%% cheio
 
 # for message views
@@ -470,6 +472,9 @@ mailServerLoginFailedTitleWithAccount=Início de sessão para a conta "%S" falho
 mailServerLoginFailed2=Início de sessão para o servidor %1$S com o nome de utilizador %2$S falhou
 mailServerLoginFailedRetryButton=Volta&r a tentar
 mailServerLoginFailedEnterNewPasswordButton=Intro&duza a nova palavra-passe
+
+confirmMarkAllFoldersReadTitle=Marcar todas as pastas como lidas
+confirmMarkAllFoldersReadMessage=Tem a certeza de que pretende marcar todas as mensagens em todas as pastas desta conta como lidas?
 
 # LOCALIZATION NOTE (junkBarMessage): %S is the brandname
 junkBarMessage=O %S acha que esta mensagem é lixo eletrónico.
