Pontoon: Update Basque (eu) localization of Firefox Co-authored-by: julen <julenx@gmail.com>

--- a/eu/devtools/client/netmonitor.properties
+++ b/eu/devtools/client/netmonitor.properties
@@ -1062,6 +1062,11 @@ netmonitor.toolbar.timings=Kronometrajeak
 # response headers submenu.
 netmonitor.toolbar.responseHeaders=Erantzun-goiburuak
 
+# LOCALIZATION NOTE (netmonitor.headers.toolbar.block): This is the
+# label displayed in the network details headers tab identifying the
+# block url toolbar button.
+netmonitor.headers.toolbar.block=Blokeatu
+
 # LOCALIZATION NOTE (netmonitor.summary.url): This is the label displayed
 # in the network details headers tab identifying the URL.
 netmonitor.summary.url=Eskaeraren URLa:
@@ -1111,6 +1116,11 @@ netmonitor.summary.rawHeaders.responseHeaders=Erantzun-goiburuak:
 # LOCALIZATION NOTE (netmonitor.summary.size): This is the label displayed
 # in the network details headers tab identifying the headers size.
 netmonitor.summary.size=Goiburuen tamaina:
+
+# LOCALIZATION NOTE (netmonitor.headers.raw): This is the label displayed
+# on the button in the headers tab that toggle view for raw request/response headers
+# from the currently displayed request
+netmonitor.headers.raw=Gordina
 
 # LOCALIZATION NOTE (netmonitor.response.name): This is the label displayed
 # in the network details response tab identifying an image's file name.
