--- a/eu/devtools/shared/screenshot.properties
+++ b/eu/devtools/shared/screenshot.properties
@@ -114,3 +114,20 @@ inspectNodeDesc=CSS hautatzailea
 # parameter to the 'inspect' command. Displayed when the --help flag is
 # passed to the `screenshot command.
 inspectNodeManual=Elementu bakar bat identifikatzen duen 'document.querySelector' metodoarekin erabiltzeko CSS hautatzailea
+
+# LOCALIZATION NOTE (screenshotTruncationWarning) Text displayed to user when the image
+# that would be created by the screenshot is too big and needs to be truncated to avoid
+# errors.
+# The first parameter is the width of the final image and the second parameter is the
+# height of the image.
+screenshotTruncationWarning=Irudia %1$S×%2$S tamainara moztu da sortutako irudia handiegia zelako
+
+# LOCALIZATION NOTE (screenshotDPRDecreasedWarning) Text displayed to user when the
+# screenshot they want to take is for the full page and the Device Pixel Ratio is
+# decreased to 1, to avoid creating images that are too big which may cause errors.
+screenshotDPRDecreasedWarning=Gailuaren pixelen aspektu-erlazioa 1-era txikitu da sortutako irudia handiegia zelako
+
+# LOCALIZATION NOTE (screenshotRenderingError) Text displayed to user upon
+# encountering an error while rendering the screenshot. This most often happens when the
+# resulting image is too large to be rendered.
+screenshotRenderingError=Errorea irudia sortzean. Litekeena da sortuko zen irudia handiegia izatea.
