--- a/eu/toolkit/chrome/mozapps/profile/profileSelection.properties
+++ b/eu/toolkit/chrome/mozapps/profile/profileSelection.properties
@@ -5,9 +5,10 @@
 # LOCALIZATION NOTE: These strings are used for startup/profile problems and the profile manager.
 
 # Application not responding
-# LOCALIZATION NOTE (restartTitle, restartMessageNoUnlocker, restartMessageUnlocker, restartMessageNoUnlockerMac, restartMessageUnlockerMac): Messages displayed when the application is running but is not responding to commands. %S is the application name.
+# LOCALIZATION NOTE (restartTitle, restartMessageNoUnlocker2, restartMessageUnlocker, restartMessageNoUnlockerMac, restartMessageUnlockerMac): Messages displayed when the application is running but is not responding to commands. %S is the application name.
 restartTitle=Itxi %S
 restartMessageNoUnlocker=%S oraindik martxan dago, baina ez du erantzuten. Leiho berri bat irekitzeko, %S itxi behar duzu edo sistema osoa berrabiarazi.
+restartMessageNoUnlocker2=%S oraindik martxan dago, baina ez du erantzuten. %S erabiltzeko, lehendik dagoen %S prozesua itxi behar duzu edo beste profil bat erabili.
 restartMessageUnlocker=%S oraindik martxan dago, baina ez du erantzuten. Leiho berri bat irekitzeko, %S prozesua itxi behar duzu.
 restartMessageNoUnlockerMac=%S(r)en kopia bat irekita dago lehendik ere. Aldi berean %S(r)en kopia bakarra egon daiteke irekita.
 restartMessageUnlockerMac=%S(r)en kopia bat irekita dago lehendik ere. Abiarazita zegoen %S(r)en kopia itxi egingo da hau ireki ahal izateko.
