--- a/sv-SE/suite/branding/seamonkey/brand.properties
+++ b/sv-SE/suite/branding/seamonkey/brand.properties
@@ -5,7 +5,8 @@
 brandFullName=SeaMonkey
 brandShortName=SeaMonkey
 brandShorterName=SeaMonkey
-vendorShortName=SeaMonkey
+vendorShortName=SeaMonkey e.V.
 sidebarName=Sidofält
 app.releaseNotesURL=https://www.seamonkey-project.org/releases/seamonkey%VERSION%/
+app.troubleshootingURL=https://www.seamonkey-project.org/releases/seamonkey%VERSION%/#troubleshooting
 app.vendorURL=https://www.seamonkey-project.org/
