Pontoon: Update Swedish (sv-SE) localization of SeaMonkey Co-authored-by: Peter Kihlstedt <peter.kihlstedt@gmail.com>

--- a/sv-SE/suite/chrome/mailnews/messenger.properties
+++ b/sv-SE/suite/chrome/mailnews/messenger.properties
@@ -480,6 +480,7 @@ mailServerLoginFailedRetryButton=&Försök igen
 mailServerLoginFailedEnterNewPasswordButton=&Ange nytt lösenord
 
 confirmMarkAllFoldersReadTitle=Märk alla mappar som lästa
+confirmMarkAllFoldersReadMessage=Är du säker på att du vill markera alla meddelanden i alla mappar i det här kontot som lästa?
 
 # LOCALIZATION NOTE (junkBarMessage): %S is the brandname
 junkBarMessage=%S tror att det här meddelandet är skräppost.
