--- a/sv-SE/devtools/client/debugger.properties
+++ b/sv-SE/devtools/client/debugger.properties
@@ -687,6 +687,7 @@ inlinePreview.show.label=Visa inline-förhandsvisning
 inlinePreview.hide.label=Dölj inline-förhandsvisning
 
 # LOCALIZATION NOTE (settings.button.label): Label for Settings button
+settings.button.label=Felsökningsinställningar
 
 # LOCALIZATION NOTE (settings.disableJavaScript.label): Context menu item
 # label for disabling JavaScript
@@ -694,6 +695,7 @@ settings.disableJavaScript.label=Inaktivera JavaScript
 
 # LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
 # tooltip for disabling JavaScript
+settings.disableJavaScript.tooltip=Inaktiverar JavaScript (Kräver uppdatering)
 
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
