--- a/pl/devtools/client/debugger.properties
+++ b/pl/devtools/client/debugger.properties
@@ -686,6 +686,17 @@ inlinePreview.show.label=Wyświetl wbudowany podgląd
 # for hiding the inline preview block
 inlinePreview.hide.label=Ukryj wbudowany podgląd
 
+# LOCALIZATION NOTE (settings.button.label): Label for Settings button
+settings.button.label=Ustawienia debugera
+
+# LOCALIZATION NOTE (settings.disableJavaScript.label): Context menu item
+# label for disabling JavaScript
+settings.disableJavaScript.label=Wyłącz JavaScript
+
+# LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
+# tooltip for disabling JavaScript
+settings.disableJavaScript.tooltip=Wyłącza JavaScript (wymaga odświeżenia)
+
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
 preview.noProperties=Brak własności
