--- a/pl/devtools/client/webconsole.properties
+++ b/pl/devtools/client/webconsole.properties
@@ -226,12 +226,30 @@ webconsole.menu.selectAll.accesskey=o
 # Label used for a context-menu item displayed for object/variable logs. Clicking on it
 # opens the webconsole sidebar for the logged variable.
 webconsole.menu.openInSidebar.label=Otwórz w panelu bocznym
+
+# LOCALIZATION NOTE (webconsole.menu.openInSidebar.label)
+# Label used for a context-menu item displayed for object/variable logs. Clicking on it
+# opens the webconsole sidebar for the logged variable.
+webconsole.menu.openInSidebar.label1=Zbadaj obiekt w panelu bocznym
 webconsole.menu.openInSidebar.accesskey=b
 
 # LOCALIZATION NOTE (webconsole.menu.exportClipboard.label)
 # Label used for a context-menu item displayed on the output. Clicking on it
 # copies the entire output of the console to the clipboard.
 webconsole.menu.exportClipboard.label=Eksportuj widoczne komunikaty do schowka
+
+# LOCALIZATION NOTE (webconsole.menu.timeWarp.label)
+# Label used for a context-menu item displayed for any log. Clicking on it will
+# jump to the execution point where the log item was generated.
+webconsole.menu.timeWarp.label=Przejdź do tego momentu
+
+# LOCALIZATION NOTE (webconsole.jumpButton.tooltip)
+# Label used for the tooltip on the "jump" button in the console. It's displayed when
+# the user recorded execution with WebReplay, is now paused in the debugger, and hover a
+# message in the console output. Clicking on it will jump to the execution point where the
+# log item was generated.
+# Parameters: %S is the level of the message.
+webconsole.jumpButton.tooltip=%S — przejdź do tego momentu
 
 # LOCALIZATION NOTE (webconsole.menu.exportSubmenu.label)
 # Label used for a context-menu item displayed on the output. Clicking on it
@@ -248,19 +266,6 @@ webconsole.menu.exportSubmenu.exportCliboard.label=Schowek
 # opens a file picker to allow the user save a file containing
 # the output of the console.
 webconsole.menu.exportSubmenu.exportFile.label=Plik
-
-# LOCALIZATION NOTE (webconsole.menu.timeWarp.label)
-# Label used for a context-menu item displayed for any log. Clicking on it will
-# jump to the execution point where the log item was generated.
-webconsole.menu.timeWarp.label=Przejdź do tego momentu
-
-# LOCALIZATION NOTE (webconsole.jumpButton.tooltip)
-# Label used for the tooltip on the "jump" button in the console. It's displayed when
-# the user recorded execution with WebReplay, is now paused in the debugger, and hover a
-# message in the console output. Clicking on it will jump to the execution point where the
-# log item was generated.
-# Parameters: %S is the level of the message.
-webconsole.jumpButton.tooltip=%S — przejdź do tego momentu
 
 # LOCALIZATION NOTE (webconsole.clearButton.tooltip)
 # Label used for the tooltip on the clear logs button in the console top toolbar bar.
@@ -391,11 +396,6 @@ webconsole.console.settings.menu.item.autocomplete.tooltip=Po włączeniu tej op
 webconsole.console.settings.menu.item.enablePersistentLogs.label=Trwałe dzienniki
 # LOCALIZATION NOTE (webconsole.console.settings.menu.item.enablePersistentLogs.tooltip)
 webconsole.console.settings.menu.item.enablePersistentLogs.tooltip=Po włączeniu tej opcji wyjście nie będzie czyszczone po przejściu do kolejnej strony
-
-# LOCALIZATION NOTE (webconsole.console.settings.menu.item.eagerEvaluation.label)
-webconsole.console.settings.menu.item.eagerEvaluation.label=Wczesna interpretacja
-# LOCALIZATION NOTE (webconsole.console.settings.menu.item.eagerEvaluation.tooltip)
-webconsole.console.settings.menu.item.eagerEvaluation.tooltip=Po włączeniu tej opcji wprowadzane dane będą interpretowane już podczas ich wpisywania
 
 # LOCALIZATION NOTE (webconsole.console.settings.menu.item.instantEvaluation.label)
 webconsole.console.settings.menu.item.instantEvaluation.label=Natychmiastowa interpretacja
