Pontoon: Update Polish (pl) localization of Firefox Co-authored-by: Piotr Drąg <piotrdrag@gmail.com>

--- a/pl/devtools/client/netmonitor.properties
+++ b/pl/devtools/client/netmonitor.properties
@@ -1120,7 +1120,7 @@ netmonitor.summary.size=Rozmiar nagłówka:
 # LOCALIZATION NOTE (netmonitor.headers.raw): This is the label displayed
 # on the button in the headers tab that toggle view for raw request/response headers
 # from the currently displayed request
-netmonitor.headers.raw=Niesformatowany
+netmonitor.headers.raw=Nieprzetworzone
 
 # LOCALIZATION NOTE (netmonitor.response.name): This is the label displayed
 # in the network details response tab identifying an image's file name.
