Pontoon: Update Finnish (fi) localization of Firefox Co-authored-by: Lasse Liehu <lasse.liehu@iki.fi>

--- a/fi/browser/chrome/browser/browser.properties
+++ b/fi/browser/chrome/browser/browser.properties
@@ -1231,4 +1231,4 @@ livebookmarkMigration.title                      = %Sin live-kirjanmerkit
 
 # LOCALIZATION NOTE (gnomeSearchProviderSearch):
 # Used for search by Gnome Shell activity screen, %S is a searched string.
-gnomeSearchProviderSearch=Etsi internetistä haulla "%S"
+gnomeSearchProviderSearch=Etsi internetistä haulla ”%S”
