Pontoon: Update Croatian (hr) localization of Firefox Co-authored-by: Milo <mail@milotype.de>

--- a/hr/browser/chrome/browser/browser.properties
+++ b/hr/browser/chrome/browser/browser.properties
@@ -359,7 +359,7 @@ menuRestoreAllTabs.label=Vrati sve kartice
 menuRestoreAllTabsSubview.label=Vrati zatvorene kartice
 # LOCALIZATION NOTE (menuRestoreAllWindows, menuUndoCloseWindowLabel, menuUndoCloseWindowSingleTabLabel):
 # see bug 394759
-menuRestoreAllWindows.label=Vrati sve prozore
+menuRestoreAllWindows.label=Obnovi sve prozore
 # LOCALIZATION NOTE (menuRestoreAllWindowsSubview.label): like menuRestoreAllWindows.label,
 # but used in the history subview in the panel UI, so needs to mention these are *closed* windows.
 menuRestoreAllWindowsSubview.label=Vrati zatvorene prozore
