--- a/hr/browser/chrome/browser/activity-stream/newtab.properties
+++ b/hr/browser/chrome/browser/activity-stream/newtab.properties
@@ -40,7 +40,7 @@ confirm_history_delete_p1=Stvarno želiš izbrisati sve primjere ove stranice iz
 # LOCALIZATION NOTE (confirm_history_delete_notice_p2): this string is displayed in
 # the same dialog as confirm_history_delete_p1. "This action" refers to deleting a
 # page from history.
-confirm_history_delete_notice_p2=Ova radnja je nepovratna.
+confirm_history_delete_notice_p2=Ova se radnja ne može poništiti.
 menu_action_save_to_pocket=Spremi u Pocket
 menu_action_delete_pocket=Izbriši iz Pocketa
 menu_action_archive_pocket=Arhiviraj u Pocket
