--- a/vi/devtools/client/netmonitor.properties
+++ b/vi/devtools/client/netmonitor.properties
@@ -88,23 +88,23 @@ cookiesFilterText=Lọc cookie
 responseEmptyText=Không có dữ liệu phản hồi có sẵn cho yêu cầu này
 
 # LOCALIZATION NOTE (paramsEmptyText): This is the text displayed in the
-# params tab of the network details pane when there are no params available.
+# request tab of the network details pane when there are no params available.
 paramsEmptyText=Yêu cầu này không có tham số
 
 # LOCALIZATION NOTE (paramsFilterText): This is the text displayed in the
-# params tab of the network details pane for the filtering input.
+# request tab of the network details pane for the filtering input.
 paramsFilterText=Lọc tham số yêu cầu
 
 # LOCALIZATION NOTE (paramsQueryString): This is the label displayed
-# in the network details params tab identifying the query string.
+# in the network details request tab identifying the query string.
 paramsQueryString=Chuỗi truy vấn
 
 # LOCALIZATION NOTE (paramsFormData): This is the label displayed
-# in the network details params tab identifying the form data.
+# in the network details request tab identifying the form data.
 paramsFormData=Dữ liệu biểu mẫu
 
 # LOCALIZATION NOTE (paramsPostPayload): This is the label displayed
-# in the network details params tab identifying the request payload.
+# in the network details request tab identifying the request payload.
 paramsPostPayload=Payload yêu cầu
 
 # LOCALIZATION NOTE (requestHeaders): This is the label displayed
@@ -121,11 +121,11 @@ requestHeadersFromUpload=Yêu cầu header từ luồng tải lên
 responseHeaders=Phản hồi header
 
 # LOCALIZATION NOTE (requestCookies): This is the label displayed
-# in the network details params tab identifying the request cookies.
+# in the network details request tab identifying the request cookies.
 requestCookies=Cookie yêu cầu
 
 # LOCALIZATION NOTE (responseCookies): This is the label displayed
-# in the network details params tab identifying the response cookies.
+# in the network details request tab identifying the response cookies.
 responseCookies=Cookie phản hồi
 
 # LOCALIZATION NOTE (responsePayload): This is the label displayed
@@ -150,7 +150,7 @@ jsonpScopeName=JSONP → callback %S()
 responseTruncated=Phản hồi đã bị cắt ngắn
 
 # LOCALIZATION NOTE (requestTruncated): This is the text displayed
-# in the params tab of the network details pane when the request is over
+# in the request tab of the network details pane when the request is over
 # the truncation limit and thus was truncated.
 requestTruncated=Yêu cầu đã bị cắt ngắn
 
@@ -350,6 +350,9 @@ netmonitor.timings.startedAt=Bắt đầu: %S
 # when the request actually finished downloading.
 # %S is time expressed in milliseconds or minutes.
 netmonitor.timings.downloadedAt=Đã tải xuống: %S
+
+# LOCALIZATION NOTE (netmonitor.timings.noTimings): Message that displays in the
+# timings pane when thea request has been blocked
 
 # LOCALIZATION NOTE (networkMenu.millisecond): This is the label displayed
 # in the network menu specifying timing interval divisions (in milliseconds).
@@ -760,6 +763,14 @@ netmonitor.ws.context.received=Đã nhận
 # for the "Received" menu item displayed in the context menu in the websocket toolbar.
 netmonitor.ws.context.received.accesskey=R
 
+# LOCALIZATION NOTE (netmonitor.ws.context.controlFrames): This is the label displayed
+# on the context menu that shows "Control Frames" WebSocket frames.
+netmonitor.ws.context.controlFrames=Điều khiển
+
+# LOCALIZATION NOTE (netmonitor.ws.context.controlFrames.accesskey): This is the access key
+# for the "Control Frames" menu item displayed in the context menu in the websocket toolbar.
+netmonitor.ws.context.controlFrames.accesskey=o
+
 # LOCALIZATION NOTE (netmonitor.ws.context.copyFrame): This is the label displayed
 # on the context menu that shows "Copy Message".
 netmonitor.ws.context.copyFrame=Sao chép tin nhắn
@@ -779,11 +790,6 @@ netmonitor.ws.type.sent=Gửi
 # LOCALIZATION NOTE (netmonitor.ws.type.received): This is the label used as
 # accessible text for the "received" type icon in the websocket table's "data" column.
 netmonitor.ws.type.received=Đã nhận
-
-# LOCALIZATION NOTE (netmonitor.ws.time.format): This is the format used for the
-# time values in the websocket table's "time" column
-# %1$S is the formatted hour-minutes-seconds, %2$S is the milliseconds (zero-padded)
-netmonitor.ws.time.format=%1$S.%2$S
 
 # LOCALIZATION NOTE (netmonitor.ws.rawData.header): This is the label displayed
 # in the messages panel identifying the raw data.
@@ -859,6 +865,18 @@ netmonitor.actionbar.removeBlockedUrl=Xóa mẫu
 # tooltip shown over the Add Blocked URL button
 netmonitor.actionbar.addBlockedUrl=Thêm mẫu
 
+# LOCALIZATION NOTE (netmonitor.requestBlockingMenu.removeAllBlockedUrls): This is the
+# context menu item for removing all blocked URLs
+netmonitor.requestBlockingMenu.removeAllBlockedUrls=Xóa tắt cả
+
+# LOCALIZATION NOTE (netmonitor.requestBlockingMenu.enableAllBlockedUrls): This is the
+# context menu item for enabling all blocked URLs
+netmonitor.requestBlockingMenu.enableAllBlockedUrls=Bật tất cả
+
+# LOCALIZATION NOTE (netmonitor.requestBlockingMenu.disableAllBlockedUrls): This is the
+# context menu item for disabling all blocked URLs
+netmonitor.requestBlockingMenu.disableAllBlockedUrls=Tắt tất cả
+
 # LOCALIZATION NOTE (netmonitor.actionbar.search): This is the label displayed
 # in the action bar's search tab
 netmonitor.actionbar.search=Tìm kiếm
@@ -900,6 +918,10 @@ netmonitor.tab.cache=Bộ nhớ đệm
 # LOCALIZATION NOTE (netmonitor.tab.params): This is the label displayed
 # in the network details pane identifying the params tab.
 netmonitor.tab.params=Tham số
+
+# LOCALIZATION NOTE (netmonitor.tab.request): This is the label displayed
+# in the network details pane identifying the request tab.
+netmonitor.tab.request=Yêu cầu
 
 # LOCALIZATION NOTE (netmonitor.tab.response): This is the label displayed
 # in the network details pane identifying the response tab.
@@ -1038,6 +1060,10 @@ netmonitor.toolbar.timings=Thời gian
 # response headers submenu.
 netmonitor.toolbar.responseHeaders=Phản hồi header
 
+# LOCALIZATION NOTE (netmonitor.headers.toolbar.block): This is the
+# label displayed in the network details headers tab identifying the
+# block url toolbar button.
+
 # LOCALIZATION NOTE (netmonitor.summary.url): This is the label displayed
 # in the network details headers tab identifying the URL.
 netmonitor.summary.url=URL yêu cầu:
@@ -1087,6 +1113,10 @@ netmonitor.summary.rawHeaders.responseHeaders=Phản hồi header:
 # LOCALIZATION NOTE (netmonitor.summary.size): This is the label displayed
 # in the network details headers tab identifying the headers size.
 netmonitor.summary.size=Kích cỡ header:
+
+# LOCALIZATION NOTE (netmonitor.headers.raw): This is the label displayed
+# on the button in the headers tab that toggle view for raw request/response headers
+# from the currently displayed request
 
 # LOCALIZATION NOTE (netmonitor.response.name): This is the label displayed
 # in the network details response tab identifying an image's file name.
@@ -1525,3 +1555,19 @@ netmonitor.cache.lastModified=Sửa đổi lần cuối
 # LOCALIZATION NOTE (netmonitor.cache.device): This is the label text for the device
 # where a cached object was fetched from (e.g. "disk").
 netmonitor.cache.device=Thiết bị
+
+# LOCALIZATION NOTE (netmonitor.settings.menuTooltip): This is the tooltip that gets displayed
+# when the settings menu button is hovered.
+netmonitor.settings.menuTooltip=Cài đặt mạng
+
+# LOCALIZATION NOTE (netmonitor.settings.importHarTooltip): This is the tooltip that gets displayed
+# when the HAR import menu item is hovered
+netmonitor.settings.importHarTooltip=Nhập tập tin HAR của dữ liệu mạng
+
+# LOCALIZATION NOTE (netmonitor.settings.saveHarTooltip): This is the tooltip that gets displayed
+# when the HAR save menu item is hovered
+netmonitor.settings.saveHarTooltip=Lưu dữ liệu mạng vào tập tin HAR
+
+# LOCALIZATION NOTE (netmonitor.settings.copyHarTooltip): This is the tooltip that gets displayed
+# when the HAR copy menu item is hovered
+netmonitor.settings.copyHarTooltip=Sao chép dữ liệu mạng vào clipboard
