Pontoon: Update Italian (it) localization of SeaMonkey Co-authored-by: Iacopo Benesperi <iacopo.benesperi@mozillaitalia.org> Co-authored-by: Ian Neal <iann_bugzilla@blueyonder.co.uk>

--- a/it/suite/chrome/mailnews/imapMsgs.properties
+++ b/it/suite/chrome/mailnews/imapMsgs.properties
@@ -206,11 +206,21 @@ imapServerDroppedConnection=Impossibile connettersi al server IMAP. Si potrebbe 
 di connessioni attive al server. In tal caso, usare la finestra Impostazioni avanzate \
 del server IMAP per ridurre il numero di connessioni in cache.
 
+# This will occur when a folder that has never been imap selected or opened
+# (left-clicked) is first right-clicked to access quota properties.
 imapQuotaStatusFolderNotOpen=Le informazioni sulla quota non sono disponibili finché la cartella non viene aperta nel server di posta.
 
+# The imap capability response reports that QUOTA is not supported.
 imapQuotaStatusNotSupported=Questo server non gestisce le quote.
 
 imapQuotaStatusNoQuota=Non vi sono quote di archiviazione per questa cartella.
+
+# The getqutaroot command succeeded but reported no quota information.
+imapQuotaStatusNoQuota2=Questa cartella non fornisce informazioni sulle quote.
+
+# Folder properties were requested by the user (right-click) before the getquotaroot
+# command was sent.
+imapQuotaStatusInProgress=Informazioni sulle quote non ancora disponibili.
 
 # Out of memory
 imapOutOfMemory=L'applicazione ha esaurito la memoria.
