--- a/it/suite/chrome/mailnews/messenger.properties
+++ b/it/suite/chrome/mailnews/messenger.properties
@@ -372,6 +372,8 @@ newMailAlert_message=#1 ha ricevuto #2 nuovo messaggio;#1 ha ricevuto #2 nuovi m
 
 # For the Quota tab in the mail folder properties dialog
 quotaUsedFree=utilizzati %S di %S kB
+
+# For the Quota tab in the mail folder properties dialog
 quotaPercentUsed=%S%% utilizzato
 
 # for message views
@@ -477,6 +479,9 @@ mailServerLoginFailedTitleWithAccount=Accesso non riuscito all'account "%S"
 mailServerLoginFailed2=Accesso non riuscito al server %1$S con il nome utente %2$S.
 mailServerLoginFailedRetryButton=&Riprova
 mailServerLoginFailedEnterNewPasswordButton=Inserisci una &nuova password
+
+confirmMarkAllFoldersReadTitle=Marca tutte le cartelle come lette
+confirmMarkAllFoldersReadMessage=Si è sicuri di voler marcare tutti i messaggi di tutte le cartelle di questo account come letti?
 
 # LOCALIZATION NOTE (junkBarMessage): %S is the brandname
 junkBarMessage=%S considera questo messaggio come spam.
