--- a/it/suite/chrome/browser/tabbrowser.properties
+++ b/it/suite/chrome/browser/tabbrowser.properties
@@ -6,8 +6,24 @@ tabs.loading=Caricamento in corso…
 tabs.untitled=(senza titolo)
 tabs.closeWarningTitle=Conferma chiusura altre schede
 tabs.closeWarning=Si stanno per chiudere %S altre schede. Si vuole continuare?
+# LOCALIZATION NOTE (tabs.closeWarningOther):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# The singular form is not considered since this string is used only for
+# multiple tabs.
+tabs.closeWarningOther=;Si stanno per chiudere #1 altre schede. Continuare?
 tabs.closeButton=Chiudi le altre schede
 tabs.closeWarningPromptMe=Avvisa quando si tenta di chiudere altre schede
+
+tabs.closeWarningTitleAll=Conferma chiusura
+# LOCALIZATION NOTE (tabs.closeWarningAll):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# The singular form is not considered since this string is used only for
+# multiple tabs.
+tabs.closeWarningAll=;Questa finestra del browser ha #1 schede aperte. Chiudere la finestra con tutte le sue schede?
+tabs.closeButtonAll=Chiudi tutte le schede
+tabs.closeWarningPromptMeAll=Avvisa quando si chiudono più schede
 
 # LOCALIZATION NOTE (tabs.openWarningTitle, tabs.openWarningMultipleBranded, tabs.openButtonMultiple, tabs.openWarningPromptMeBranded):
 # These items were moved from /chrome/common/places/places.properties.
