--- a/fy-NL/devtools/client/netmonitor.properties
+++ b/fy-NL/devtools/client/netmonitor.properties
@@ -1120,6 +1120,7 @@ netmonitor.summary.size=Kopgrutte:
 # LOCALIZATION NOTE (netmonitor.headers.raw): This is the label displayed
 # on the button in the headers tab that toggle view for raw request/response headers
 # from the currently displayed request
+netmonitor.headers.raw=Rûch
 
 # LOCALIZATION NOTE (netmonitor.response.name): This is the label displayed
 # in the network details response tab identifying an image's file name.
