Pontoon: Update Armenian (hy-AM) localization of Firefox Co-authored-by: anush.amirbekyan <anush.amirbekyan@realschool.am> Co-authored-by: suren.minasyan <suren.minasyan@realschool.am> Co-authored-by: Hrant Ohnayan <hrant.mozilla@gmail.com>

--- a/hy-AM/toolkit/chrome/mozapps/update/updates.properties
+++ b/hy-AM/toolkit/chrome/mozapps/update/updates.properties
@@ -2,11 +2,6 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-# LOCALIZATION NOTE: The 1st %S is the update name and the 2nd %S is the build
-# identifier from the local updates.xml for displaying update history
-# example: MyApplication (20081022033543)
-updateFullName=%S (%S)
-
 # LOCALIZATION NOTE: The 1st %S is brandShortName and 2nd %S is update version
 # where update version from the update xml
 # example: MyApplication 10.0.5
@@ -20,19 +15,15 @@ updateNightlyName=%1$S %2$S %3$S գիշերային
 intro_major=Թարմացնել մինչ %1$S %2$S:
 intro_minor=Հասանելի է %1$S-ի անվտանգ և կայուն թարմացում:
 
-updateType_major=Նոր Տարբերակ
-updateType_minor=Անվտանգության Թարմացում
-
 # LOCALIZATION NOTE: When present %S is brandShortName
 verificationError=%S-ը չի կարող հավաստել թարմացման փաթեթի ամբողջականությունը:
-resumePausedAfterCloseTitle=Ծրագրի Թարմացում
-resumePausedAfterCloseMsg=Դուք դադարեցրել էք այս թարմացման բեռնումը: Ցանկանու՞մ եք բեռնել թարմացումը խորապատկերում՝ մինչդեռ շարունակում էք օգտագործել %S-ը:
 updaterIOErrorTitle=Ծրագրի Թարմացումը Խափանվեց
 updaterIOErrorMsg=Թարմացումը չտեղադրվեց: Համոզվեք, որ ձեր համակարգչում չկան %S-ի աշխատող այլ կրկնօրինակներ, ապա վերամեկնարկեք %S-ը՝ կրկին փորձելու համար:
 okButton=Լավ
 okButton.accesskey=O
 askLaterButton=Հարցնել հետո
 askLaterButton.accesskey=A
+
 noThanksButton=Ոչ, շնորհակալ եմ
 noThanksButton.accesskey=N
 updateButton_minor=Թարմացնել %S-ը
@@ -55,8 +46,6 @@ restartNowButton.accesskey=R
 statusSucceededFormat=Տեղադրվեց %S-ում
 
 statusFailed=Տեղակայումը Խափանվեց
-pauseButtonPause=Ընդմիջել
-pauseButtonResume=Շարունակել
 hideButton=Թաքցնել
 hideButton.accesskey=H
 
@@ -70,12 +59,8 @@ installPending=Տեղակայումը ավարտված չէ
 patchApplyFailure=Թարմացումը չի կարող տեղադրվել (հնարավոր չեղավ կարկատել)
 elevationFailure=Դուք չունեք անհրաժեշտ թույլտվություններ՝ այս թարմացումը տեղադրելու համար: Կապնվեք ցանցի վարիչի հետ:
 
-# LOCALIZATION NOTE: %S is the amount downloaded so far
-# example: Paused —  879 KB of 2.1 MB
-downloadPausedStatus=Դադար` %S
-
 check_error-200=Թարմացման XML ֆայլի ձևի սխալ (200)
-check_error-403=Արգելված գործողություն (403)
+check_error-403=Մուտքը մերժվել է (403)
 check_error-404=Թարմացման XML ֆայլը չի գտնվել (404)
 check_error-500=Ներքին սպասարկիչի սխալ (500)
 check_error-2152398849=Սխալ (անհայտ պատճառով)
